--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -103,17 +103,20 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item nav-item0">
+                            <li class="nav-item nav-item-home">
                                 <a class="nav-link" href="index.html">首頁</a>
                             </li>
-                            <li class="nav-item nav-item1">
-                                <a class="nav-link" href="introduction.html ">介紹</a>
+                            <li class="nav-item nav-item-aboutus">
+                                <a class="nav-link" href="introduction.html ">關於我們</a>
                             </li>
-                            <li class="nav-item nav-item2">
+                            <li class="nav-item nav-item-subject">
+                                <a class="nav-link" href="subject.html">專題介紹</a>
+                            </li>
+                            <li class="nav-item nav-item-monster">
                                 <a class="nav-link" href="monsters.html">妖怪選單</a>
                             </li>
-                            <li class="nav-item nav-item3">
-                                <a class="nav-link" href="shoppingcart.html">購物車</a>
+                            <li class="nav-item nav-item-shop">
+                                <a class="nav-link" href="shop.html">商城</a>
                             </li>
                         </ul>
                     </div>
@@ -127,29 +130,34 @@
     <div class="menu">
         <div class="menu-items">
             <a class="" href="index.html">
-                <div class="menu-item menu-item0">
-
+                <div class="menu-item menu-item-home">
                     <img src="resource/icon/home.png" class="menu-icon">
-                    <div class="menu-item-text ">首頁</div>
+                    <div class="menu-item-text">首頁</div>
 
                 </div>
             </a>
             <a class="" href="introduction.html">
-                <div class="menu-item menu-item1">
+                <div class="menu-item menu-item-aboutus">
                     <img src="resource/icon/aboutus.png" class="menu-icon">
-                    <div class="menu-item-text">介紹</div>
+                    <div class="menu-item-text">關於我們</div>
+                </div>
+            </a>
+            <a class="" href="subject.html">
+                <div class="menu-item menu-item-subject">
+                    <img src="resource/icon/subject.png" class="menu-icon">
+                    <div class="menu-item-text">專題介紹</div>
                 </div>
             </a>
             <a class="" href="monsters.html">
-                <div class="menu-item menu-item2">
+                <div class="menu-item menu-item-monster">
                     <img src="resource/icon/monster.png" class="menu-icon">
                     <div class="menu-item-text">妖怪選單</div>
                 </div>
             </a>
-            <a class="" href="shoppingcart.html">
-                <div class="menu-item menu-item3">
-                    <img src="resource/icon/shopping-cart.png" class="menu-icon">
-                    <div class="menu-item-text">購物車</div>
+            <a class="" href="shop.html">
+                <div class="menu-item menu-item-shop">
+                    <img src="resource/icon/shop.png" class="menu-icon">
+                    <div class="menu-item-text">商城</div>
                 </div>
             </a>
         </div>
@@ -188,7 +196,7 @@
                                 <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
+                                <img src="resource/carousel/0.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -218,7 +226,7 @@
                                 <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
+                                <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
@@ -244,7 +252,7 @@
                                 <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
+                                <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3"
