--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -60,7 +60,7 @@
             width: 100%;
             background-size: cover;
             background-position: center center;
-            background-image: url('resource/carousel/1.jpg');
+            background-image: url('resource/carousel/5.jpg');
             margin: 30px 0 0 0;
         }
 
@@ -79,8 +79,8 @@
             border: 0
         }
 
-        .member,
-        .team {
+        .concept,
+        .standardtext {
             border-bottom: 4px solid #000;
             padding-bottom: 20px;
         }
@@ -158,7 +158,7 @@
             </a>
             <a class="" href="subject.html">
                 <div class="menu-item menu-item-subject">
-                    <img src="resource/icon/aboutus.png" class="menu-icon">
+                    <img src="resource/icon/subject.png" class="menu-icon">
                     <div class="menu-item-text">專題介紹</div>
                 </div>
             </a>
@@ -170,7 +170,7 @@
             </a>
             <a class="" href="shop.html">
                 <div class="menu-item menu-item-shop">
-                    <img src="resource/icon/shopping-cart.png" class="menu-icon">
+                    <img src="resource/icon/shop.png" class="menu-icon">
                     <div class="menu-item-text">商城</div>
                 </div>
             </a>
@@ -183,18 +183,18 @@
             <div class="row justify-content-center">
                 <div class="col-10 content-header">
                     <div class="content-header-left">
-                        <img src="resource/icon/aboutus.png" class="content-header-icon">
+                        <img src="resource/icon/subject.png" class="content-header-icon">
                         <div class="content-header-title">專題介紹</div>
                     </div>
                     <div class="content-header-right">
-                        <a href="#memberIntroduction">
+                        <a href="#designConcept">
                             <div class="content-header-item content-header-item-mgr">設計理念</div>
                         </a>
-                        <a href="#teamIntroduction">
-                            <div class="content-header-item content-header-item-mgr">標準字&標準色</div>
+                        <a href="#standardText">
+                            <div class="content-header-item content-header-item-mgr">標準字</div>
                         </a>
-                        <a href="#subjectIntroduction">
-                            <div class="content-header-item "></div>
+                        <a href="#standardColor">
+                            <div class="content-header-item ">標準色</div>
                         </a>
                     </div>
                 </div>
@@ -211,76 +211,11 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="member">
-                        <div id="memberIntroduction" style="height: 56px; width:100%;"></div>
-                        <div class="title-text">組員介紹</div>
-                        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="resource/carousel/2.jpg" class="card-img-top">
-                                    <div class="card-body">
-                                        <h5 class="card-title">組員1</h5>
-                                        <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="resource/carousel/3.jpg" class="card-img-top">
-                                    <div class="card-body">
-                                        <h5 class="card-title">組員2</h5>
-                                        <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="resource/carousel/4.jpg" class="card-img-top">
-                                    <div class="card-body">
-                                        <h5 class="card-title">組員3</h5>
-                                        <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="resource/carousel/5.jpg" class="card-img-top">
-                                    <div class="card-body">
-                                        <h5 class="card-title">組員4</h5>
-                                        <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="resource/carousel/6.jpg" class="card-img-top">
-                                    <div class="card-body">
-                                        <h5 class="card-title">組員5</h5>
-                                        <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div id="designConcept" style="height: 56px; width:100%;"></div>
+                    <div class="title-text">設計理念</div>
+                    <div class="concept">
+                        　　我們是以台灣妖怪為主軸，透過蒐集到的妖怪文獻來進行妖怪的發想與設計，使設計出的妖怪不失原有意涵。<br /><br />
+                        　　我們希望消費者可以透過拼拼圖來認識妖怪，在娛樂的過程中進行文化的傳承，讓更多人可以認識台灣的本土文化，而拼圖可以讓消費者獲得莫大的成就感，同時又具有收藏的價值。
                     </div>
                 </div>
             </div>
@@ -289,13 +224,11 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="team">
-                        <div id="teamIntroduction" style="height: 56px; width:100%;"></div>
-                        <div class="title-text">團隊介紹</div>
-                        <div class="content-text">
-                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
-                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。
-                        </div>
+                    <div class="standardtext">
+                        <div id="standardText" style="height: 56px; width:100%;"></div>
+                        <div class="title-text">標準字</div>
+                        <h1 style="width: 100%;background-color: antiquewhite;padding: 100px 20px;">這是標準字的圖片</h1>
+                        　　這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字。
                     </div>
                 </div>
             </div>
@@ -304,13 +237,11 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="subject">
-                        <div id="subjectIntroduction" style="height: 56px; width:100%;"></div>
-                        <div class="title-text">專題介紹</div>
-                        <div class="content-text">
-                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
-                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。
-                        </div>
+                    <div class="standardcolor">
+                        <div id="standardColor" style="height: 56px; width:100%;"></div>
+                        <div class="title-text">標準色</div>
+                        <h1 style="width: 100%;background-color: antiquewhite;padding: 100px 20px;">這是標準色的圖片</h1>
+                        　　這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字。
                     </div>
                 </div>
             </div>
