--- a/monzzle/monsters.html
+++ b/monzzle/monsters.html
@@ -62,7 +62,7 @@
             width: 120px;
         }
 
-        .form-select-mgl{
+        .form-select-mgl {
             margin-left: 20px;
         }
 
@@ -76,13 +76,17 @@
         }
 
         @media (max-width:560px) {
-            .content-header-right{
+            .content-header-right {
                 float: left;
                 width: 100%;
                 margin-top: 5px;
             }
         }
 
+        .monster-content {
+            text-align: center;
+            margin-top: 10px;
+        }
 
         /* allpage */
     </style>
@@ -104,17 +108,20 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item nav-item0">
+                            <li class="nav-item nav-item-home">
                                 <a class="nav-link" href="index.html">首頁</a>
                             </li>
-                            <li class="nav-item nav-item1">
-                                <a class="nav-link" href="introduction.html ">介紹</a>
+                            <li class="nav-item nav-item-aboutus">
+                                <a class="nav-link" href="introduction.html ">關於我們</a>
                             </li>
-                            <li class="nav-item nav-item2">
+                            <li class="nav-item nav-item-subject">
+                                <a class="nav-link" href="subject.html">專題介紹</a>
+                            </li>
+                            <li class="nav-item nav-item-monster">
                                 <a class="nav-link" href="monsters.html">妖怪選單</a>
                             </li>
-                            <li class="nav-item nav-item3">
-                                <a class="nav-link" href="shoppingcart.html">購物車</a>
+                            <li class="nav-item nav-item-shop">
+                                <a class="nav-link" href="shop.html">商城</a>
                             </li>
                         </ul>
                     </div>
@@ -128,29 +135,34 @@
     <div class="menu">
         <div class="menu-items">
             <a class="" href="index.html">
-                <div class="menu-item menu-item0">
-
+                <div class="menu-item menu-item-home">
                     <img src="resource/icon/home.png" class="menu-icon">
-                    <div class="menu-item-text ">首頁</div>
+                    <div class="menu-item-text">首頁</div>
 
                 </div>
             </a>
             <a class="" href="introduction.html">
-                <div class="menu-item menu-item1">
+                <div class="menu-item menu-item-aboutus">
                     <img src="resource/icon/aboutus.png" class="menu-icon">
-                    <div class="menu-item-text">介紹</div>
+                    <div class="menu-item-text">關於我們</div>
+                </div>
+            </a>
+            <a class="" href="subject.html">
+                <div class="menu-item menu-item-subject">
+                    <img src="resource/icon/subject.png" class="menu-icon">
+                    <div class="menu-item-text">專題介紹</div>
                 </div>
             </a>
             <a class="" href="monsters.html">
-                <div class="menu-item menu-item2">
+                <div class="menu-item menu-item-monster">
                     <img src="resource/icon/monster.png" class="menu-icon">
                     <div class="menu-item-text">妖怪選單</div>
                 </div>
             </a>
-            <a class="" href="shoppingcart.html">
-                <div class="menu-item menu-item3">
-                    <img src="resource/icon/shopping-cart.png" class="menu-icon">
-                    <div class="menu-item-text">購物車</div>
+            <a class="" href="shop.html">
+                <div class="menu-item menu-item-shop">
+                    <img src="resource/icon/shop.png" class="menu-icon">
+                    <div class="menu-item-text">商城</div>
                 </div>
             </a>
         </div>
@@ -172,7 +184,8 @@
                             <option value="水域">水域</option>
                             <option value="陸地">陸地</option>
                         </select>
-                        <select class="form-select form-select-mgl" aria-label="Default select example" id="monstername">
+                        <select class="form-select form-select-mgl" aria-label="Default select example"
+                            id="monstername">
                             <option selected disabled>妖怪名</option>
                         </select>
                     </div>
@@ -181,8 +194,8 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-8 col-sm-6 col-md-7">
-                    <img src="" class="img-fluid monster-image">
+                <div class="col-8 col-sm-6 col-md-7 monster-content">
+                    <img src="resource/banner/9.jpg" class="img-fluid monster-image">
                 </div>
                 <div class="col-8 col-sm-7 col-md-7">
                     <div class="monster-name monster-text"></div>
