--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -79,8 +79,7 @@
             border: 0
         }
 
-        .member,
-        .team {
+        .member {
             border-bottom: 4px solid #000;
             padding-bottom: 20px;
         }
